@@ -84,14 +84,12 @@ void KFMServer::slotSortDesktop()
 	KRootWidget::getKRootWidget()->rearrangeIcons();
 }
 
-//CT 13Nov1998
-void KFMServer::slotShowConfig()
+void KFMServer::slotConfigure()
 {
-    
+    // OLD CODE FROM showConfigUI. STILL TODO
   KfmGui *cfg = new KfmGui;
   cfg->slotConfigureBrowser();
 }
-//CT
 
 void KFMServer::slotRefreshDesktop()
 {
@@ -332,9 +330,7 @@ void KFMClient::slotAuth( const char *_password )
     connect( this, SIGNAL( exec( const char*, const char* ) ),
 	     server, SLOT( slotExec( const char *, const char*) ) );    
     connect( this, SIGNAL( sortDesktop() ), server, SLOT( slotSortDesktop() ) );
-    //CT 14Nov1998
-    connect( this, SIGNAL( showConfig() ), server, SLOT( slotShowConfig() ) );
-    //CT
+    connect( this, SIGNAL( configure() ), server, SLOT( slotConfigure() ) );
     connect( this, SIGNAL( selectRootIcons( int, int, int, int, bool ) ),
 	     server, SLOT( slotSelectRootIcons( int, int, int, int, bool ) ) );
 }
