@@ -65,12 +65,10 @@ signals:
 	void sortDesktop();
 private:
 	void parse_sortDesktop( char *_data, int _len );
-//CT 14Nov1998
 signals:
-	void showConfig();
+	void configure();
 private:
-	void parse_showConfig( char *_data, int _len );
-//CT
+	void parse_configure( char *_data, int _len );
 signals:
 	void auth(const char* _password);
 private:
